--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,33 @@
 .App {
   text-align: center;
 }
+.searchbar-container{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px;
+  align-items: center;
+}
+.searchbar{
+  background-color: white;
+}
+
+.searchbar input{
+  padding: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  border: none;
+}
 
 
+.searchbar-btn button{
+  background-color: #0e6f9f;
+  border: none;
+  border-radius: 10px;
+  height: 44px;
+  color: white;
+  padding: 10px 12px;
+}
 .container{
   display: flex;
   background-color: purple;
@@ -24,11 +49,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
